# polaris-python

./: .gitignore  README.md  pyproject.toml
.github/: pypi_publish.yml
docs/: API Client.md  README.md
examples/quickstart/: README.md
examples/quickstart/provider/: provider.py
polaris_python/: api.py  client.py  register.py
polaris_python/api/: config.py  provider.py
polaris_python/model/: service.py
tests/: __init__.py  test_api.py
tests/discover/: api_provider_suite.py
